Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2933309 by drunken monkey, mkalkbrenner: Made some helper methods in the
  CommandHelper class public.
- #2928279 by drunken monkey, borisson_: Added a test for the default tracker
  plugin.

Search API 1.6 (2017-12-24):
----------------------------
- #2669962 by kevin.dutra, drunken monkey, kristofferwiklund, borisson_: Added
  option to change the order in which items are indexed.
- #2917399 by drunken monkey, andypost, borisson_, zenimagine: Fixed definition
  of Views taxonomy term plugins.
- #2922874 by drunken monkey, borisson_: Fixed DBMS compatibility handling when
  a non-default database is used with the Database backend.
- #2923910 by George Bills, drunken monkey, eft, borisson_, robin.ingelbrecht:
  Fixed handling of array-valued Views fulltext filter input.
- #2914478 by borisson_, mpp, drunken monkey, pfrenssen, claudiu.cristea,
  kevin.dutra, SylvainM, jhedstrom, bircher: Added integration with Drush 9.
- #2926733 by drunken monkey, borisson_: Fixed indexing of leading/trailing
  whitespace in fulltext tokens on database backend.
- #2922024 by drunken monkey, borisson_: Fixed Stemmer incorrectly processing
  non-English searches.
- #2931730 by drunken monkey: Adapted tests to changes in drupal_set_message().
- #2929739 by drunken monkey, borisson_: Improved adherence to coding standards.
- #2927748 by mkalkbrenner, mstiem, drunken monkey: Fixed Views field handler
  for multiple processor-defined fields returned by the server.
- #2928944 by drunken monkey: Removed assert() calls with string parameters.
- #2923976 by Martijn Houtman, drunken monkey: Fixed facets with random sorting
  on Database backend.
- #2921582 by chr.fritsch, drunken monkey: Fixed saving of "database_text" form
  field for Database servers.
- #2919884 by samuel.mortenson, borisson_, drunken monkey: Improved performance
  for saving an index's reindexing state.